--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>org.easytours.tourplanner.App</mainClass>
+                            <mainClass>App</mainClass>
                         </configuration>
                     </execution>
                 </executions>
